[package]
name = "lissajous-rs"
version = "0.1.0"
authors = ["Richard Liebig <liebig.richard@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png_encode_mini = "0.1.2"
image = "0.23.12"
minifb = "0.19.2"
